fixtures/name-resolution/negative/incompatible_cpp_alias.cos
/// diag(error, 3:1): cosmo1.name.conflicting-cpp-namespace-alias
import std as cstd from "c++/vector"
import boost as cstd from "c++/boost"
